se arregla tamaño e letra responsive al slogan y color de letra en los formularios, tambien se agrega el cambio ingles español

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
         <section id="seccion1" class="seccionuno">
             <div class="d-flex flex-column inherit-h justify-content-center">
                 <div class="fix-font-family-body height-100 secondary-color-font">
-                    <p id="titleSlogan" class="primaryText width-100">
+                    <p id="titleSlogan" class="primaryText width-100 title-slogan">
                         <span id="animatedSpanTitle" class="animate-text">Yesenia Esquivel</span>
                     </p>
-                    <p id="slogan" class="secondaryText width-100"><span id="anmatedSpanSlogan"
+                    <p id="slogan" class="secondaryText width-100 slogan"><span id="anmatedSpanSlogan"
                             class="animate-slogan">Codificando el futuro</span> </p>
                 </div>
             </div>
@@ -469,7 +469,7 @@
                     <div class="row form-row">
                         <div class="col">
                             <label for="inputNombre" class="form-label">Nombre</label>
-                            <input type="text" class="form-control contact-input secondary-color-font" id="inputNombre"
+                            <input type="text" class="form-control contact-input primary-color-font" id="inputNombre" 
                                 required>
                             <div class="invalid-feedback">
                                 Ingresa tu nombre
@@ -477,8 +477,8 @@
                         </div>
                         <div class="col">
                             <label for="inputApellido" class="form-label">Apellido</label>
-                            <input type="text" class="form-control contact-input secondary-color-font"
-                                id="inputApellido" required>
+                            <input type="text" class="form-control contact-input primary-color-font"
+                                id="inputApellido"  required>
                             <div class="invalid-feedback">
                                 Ingresa tu apellido
                             </div>
@@ -487,16 +487,16 @@
                     <div class="row form-row">
                         <div class="col">
                             <label for="inputEmail" class="form-label">Email</label>
-                            <input type="email" class="form-control contact-input secondary-color-font" id="inputEmail"
-                                required>
+                            <input type="email" class="form-control contact-input primary-color-font" id="inputEmail"
+                                required >
                             <div class="invalid-feedback">
                                 Ingresa tu email
                             </div>
                         </div>
                         <div class="col">
                             <label for="inputTelefono" class="form-label">Telefono</label>
-                            <input type="tel" class="form-control contact-input secondary-color-font"
-                                id="inputTelefono">
+                            <input type="tel" class="form-control contact-input primary-color-font"
+                                id="inputTelefono" >
                             <div class="invalid-feedback">
                                 Formato incorrecto
                             </div>
@@ -505,8 +505,8 @@
                     <div class="row form-row">
                         <div class="col">
                             <label for="inputDireccion" class="form-label">Dirección</label>
-                            <input type="text" class="form-control contact-input secondary-color-font"
-                                id="inputDireccion">
+                            <input type="text" class="form-control contact-input primary-color-font"
+                                id="inputDireccion" >
                             <div class="invalid-feedback">
                                 Formato incorrecto
                             </div>
@@ -515,8 +515,8 @@
                     <div class="row form-row">
                         <div class="col">
                             <label for="inputMensaje" class="form-label">Mensaje</label>
-                            <textarea class="form-control secondary-color-font" id="inputMensaje" rows="4"
-                                required></textarea>
+                            <textarea class="form-control primary-color-font" id="inputMensaje" rows="4"
+                             required></textarea>
                             <div class="invalid-feedback">
                                 Escribe tu mensaje
                             </div>
