--- a/indexe.html
+++ b/indexe.html
@@ -89,11 +89,11 @@
         <section id="seccion1" class="seccionuno">
             <div class="d-flex flex-column inherit-h justify-content-center">
                 <div class="fix-font-family-body height-100 secondary-color-font">
-                    <p id="titleSlogan" class="primaryText width-100">
+                    <p id="titleSlogan" class="primaryText width-100 title-slogan">
                         <span id="animatedSpanTitle" class="animate-text">Yesenia Esquivel</span>
                     </p>
                     <p id="slogan" class="secondaryText width-100"><span id="anmatedSpanSlogan"
-                            class="animate-slogan">Coding the future</span> </p>
+                            class="animate-slogan slogan">Coding the future</span> </p>
                 </div>
             </div>
         </section>
@@ -460,12 +460,12 @@
         <section id="seccionContacto"
             class="seccion-contacto d-flex justify-content-center align-items-center flex-column secondary-color-font">
             <h2 class="section-title fix-font-family secondary-color-font margin-top-cont-section">Contact</h2>
-            <div class="form-container">
+            <div class="form-container primary-color-font">
                 <form class="contact-form needs-validation" novalidate>
                     <div class="row form-row">
                         <div class="col">
                             <label for="inputNombre" class="form-label">Name</label>
-                            <input type="text" class="form-control contact-input secondary-color-font" id="inputNombre"
+                            <input type="text" class="form-control contact-input " id="inputNombre"
                                 required>
                             <div class="invalid-feedback">
                                 Enter your name
@@ -473,7 +473,7 @@
                         </div>
                         <div class="col">
                             <label for="inputApellido" class="form-label">Last name</label>
-                            <input type="text" class="form-control contact-input secondary-color-font"
+                            <input type="text" class="form-control contact-input "
                                 id="inputApellido" required>
                             <div class="invalid-feedback">
                                 Enter your last name
@@ -483,7 +483,7 @@
                     <div class="row form-row">
                         <div class="col">
                             <label for="inputEmail" class="form-label">Email</label>
-                            <input type="email" class="form-control contact-input secondary-color-font" id="inputEmail"
+                            <input type="email" class="form-control contact-input " id="inputEmail"
                                 required>
                             <div class="invalid-feedback">
                                 Enter your email
@@ -491,7 +491,7 @@
                         </div>
                         <div class="col">
                             <label for="inputTelefono" class="form-label">Phone</label>
-                            <input type="tel" class="form-control contact-input secondary-color-font"
+                            <input type="tel" class="form-control contact-input "
                                 id="inputTelefono">
                             <div class="invalid-feedback">
                                 Incorrect format
@@ -501,7 +501,7 @@
                     <div class="row form-row">
                         <div class="col">
                             <label for="inputDireccion" class="form-label">Address</label>
-                            <input type="text" class="form-control contact-input secondary-color-font"
+                            <input type="text" class="form-control contact-input "
                                 id="inputDireccion">
                             <div class="invalid-feedback">
                                 Incorrect format
@@ -511,7 +511,7 @@
                     <div class="row form-row">
                         <div class="col">
                             <label for="inputMensaje" class="form-label">Message</label>
-                            <textarea class="form-control secondary-color-font" id="inputMensaje" rows="4"
+                            <textarea class="form-control " id="inputMensaje" rows="4"
                                 required></textarea>
                             <div class="invalid-feedback">
                                 Enter your message
